tests/snapshots/parser__arrow_access.snap
---
source: tests/parser.rs
expression: out
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 12,
        },
        source: "v.foo->v.bar",
        body: Simple(
            ArrowAccess(
                ArrowAccessExpression {
                    span: Span {
                        start: 0,
                        end: 12,
                    },
                    left: Variable(
                        VariableExpression {
                            span: Span {
                                start: 0,
                                end: 5,
                            },
                            lifetime: Variable,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 2,
                                        end: 5,
                                    },
                                    name: "foo",
                                },
                            },
                        },
                    ),
                    right: Variable(
                        VariableExpression {
                            span: Span {
                                start: 7,
                                end: 12,
                            },
                            lifetime: Variable,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 9,
                                        end: 12,
                                    },
                                    name: "bar",
                                },
                            },
                        },
                    ),
                },
            ),
        ),
    },
    errors: [],
    panicked: false,
}
