tests/snapshots/parser__bitwise_binary_operation.snap
---
source: tests/parser.rs
expression: out
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 23,
        },
        source: "1 >> 2 << 3 & 4 | 5 ^ 6",
        body: Simple(
            Binary(
                BinaryExpression {
                    span: Span {
                        start: 0,
                        end: 23,
                    },
                    left: Binary(
                        BinaryExpression {
                            span: Span {
                                start: 0,
                                end: 15,
                            },
                            left: Binary(
                                BinaryExpression {
                                    span: Span {
                                        start: 0,
                                        end: 11,
                                    },
                                    left: Binary(
                                        BinaryExpression {
                                            span: Span {
                                                start: 0,
                                                end: 6,
                                            },
                                            left: NumericLiteral(
                                                NumericLiteral {
                                                    span: Span {
                                                        start: 0,
                                                        end: 1,
                                                    },
                                                    value: 1.0,
                                                    raw: "1",
                                                },
                                            ),
                                            operator: ShiftRight,
                                            right: NumericLiteral(
                                                NumericLiteral {
                                                    span: Span {
                                                        start: 5,
                                                        end: 6,
                                                    },
                                                    value: 2.0,
                                                    raw: "2",
                                                },
                                            ),
                                        },
                                    ),
                                    operator: ShiftLeft,
                                    right: NumericLiteral(
                                        NumericLiteral {
                                            span: Span {
                                                start: 10,
                                                end: 11,
                                            },
                                            value: 3.0,
                                            raw: "3",
                                        },
                                    ),
                                },
                            ),
                            operator: BitwiseAnd,
                            right: NumericLiteral(
                                NumericLiteral {
                                    span: Span {
                                        start: 14,
                                        end: 15,
                                    },
                                    value: 4.0,
                                    raw: "4",
                                },
                            ),
                        },
                    ),
                    operator: BitwiseOr,
                    right: Binary(
                        BinaryExpression {
                            span: Span {
                                start: 18,
                                end: 23,
                            },
                            left: NumericLiteral(
                                NumericLiteral {
                                    span: Span {
                                        start: 18,
                                        end: 19,
                                    },
                                    value: 5.0,
                                    raw: "5",
                                },
                            ),
                            operator: BitwiseXor,
                            right: NumericLiteral(
                                NumericLiteral {
                                    span: Span {
                                        start: 22,
                                        end: 23,
                                    },
                                    value: 6.0,
                                    raw: "6",
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
    },
    errors: [],
    panicked: false,
}
