tests/snapshots/parser__boolean_false.snap
---
source: tests/parser.rs
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 5,
        },
        source: "false",
        is_complex: false,
        body: Vec(
            [
                BooleanLiteral(
                    BooleanLiteral {
                        span: Span {
                            start: 0,
                            end: 5,
                        },
                        value: false,
                    },
                ),
            ],
        ),
    },
    errors: [],
    panicked: false,
}
