tests/snapshots/parser__boolean_true.snap
---
source: tests/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 4,
        },
        source: "true",
        body: Simple(
            BooleanLiteral(
                BooleanLiteral {
                    span: Span {
                        start: 0,
                        end: 4,
                    },
                    value: true,
                },
            ),
        ),
    },
    errors: [],
    panicked: false,
}
