tests/snapshots/parser__break.snap
---
source: tests/parser.rs
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 5,
        },
        source: "break",
        is_complex: false,
        body: [
            Break(
                BreakStatement {
                    span: Span {
                        start: 0,
                        end: 5,
                    },
                },
            ),
        ],
    },
    errors: [],
    panicked: false,
}
