tests/snapshots/parser__complex_expression.snap
---
source: tests/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 8,
        },
        source: "0; 0; 0;",
        body: Complex(
            [
                Expression(
                    NumericLiteral(
                        NumericLiteral {
                            span: Span {
                                start: 0,
                                end: 1,
                            },
                            value: 0.0,
                            raw: "0",
                        },
                    ),
                ),
                Expression(
                    NumericLiteral(
                        NumericLiteral {
                            span: Span {
                                start: 3,
                                end: 4,
                            },
                            value: 0.0,
                            raw: "0",
                        },
                    ),
                ),
                Expression(
                    NumericLiteral(
                        NumericLiteral {
                            span: Span {
                                start: 6,
                                end: 7,
                            },
                            value: 0.0,
                            raw: "0",
                        },
                    ),
                ),
            ],
        ),
    },
    errors: [],
    panicked: false,
}
