tests/snapshots/parser__conditional.snap
---
source: tests/parser.rs
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 9,
        },
        source: "q.foo ? 1",
        is_complex: false,
        body: [
            Conditional(
                ConditionalExpression {
                    span: Span {
                        start: 0,
                        end: 9,
                    },
                    test: Call(
                        CallExpression {
                            span: Span {
                                start: 0,
                                end: 5,
                            },
                            kind: Query,
                            callee: IdentifierReference {
                                span: Span {
                                    start: 2,
                                    end: 5,
                                },
                                name: "foo",
                            },
                            arguments: None,
                        },
                    ),
                    consequent: NumericLiteral(
                        NumericLiteral {
                            span: Span {
                                start: 8,
                                end: 9,
                            },
                            value: 1.0,
                            raw: "1",
                        },
                    ),
                },
            ),
        ],
    },
    errors: [],
    panicked: false,
}
