tests/snapshots/parser__continue.snap
---
source: tests/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 8,
        },
        source: "continue",
        is_complex: false,
        body: [
            Continue(
                ContinueStatement {
                    span: Span {
                        start: 0,
                        end: 8,
                    },
                },
            ),
        ],
    },
    errors: [],
    panicked: false,
}
